<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.patika.homework3.ui.recyclerview.fragments.BattleFragment"
        android:label="@string/title_battle"
        tools:layout="@layout/fragment_battle" />

    <fragment
        android:id="@+id/navigation_decks"
        android:name="com.patika.homework3.ui.recyclerview.fragments.DecksFragment"
        android:label="@string/title_decks"
        tools:layout="@layout/fragment_decks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.patika.homework3.ui.recyclerview.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_notifications_to_avatarFragment"
            app:destination="@id/avatarFragment"
            app:enterAnim="@anim/enter_from_top"
            app:exitAnim="@anim/exit_to_bottom"
            app:popEnterAnim="@anim/enter_from_bottom"
            app:popExitAnim="@anim/exit_to_top" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.patika.homework3.ui.recyclerview.fragments.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/avatarFragment"
        android:name="com.patika.homework3.ui.recyclerview.AvatarFragment"
        tools:layout="@layout/fragment_avatar"
        android:label="AvatarFragment" />
</navigation>