<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle_and_profile_gradient_background"
    tools:context=".ui.recyclerview.fragments.BattleFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="@dimen/view_margin_xxxlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_tview_white"
        android:layout_marginTop="@dimen/battle_view_score_bar_margin_top"
        android:layout_marginStart="@dimen/view_margin_medium"
        android:layout_marginEnd="@dimen/view_margin_medium"
        android:id="@+id/user_score_bar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_point_2x"
        app:layout_constraintTop_toTopOf="@id/user_score_bar"
        app:layout_constraintStart_toStartOf="@id/user_score_bar"
        app:layout_constraintBottom_toBottomOf="@id/user_score_bar"
        android:layout_marginStart="@dimen/battle_view_crown_margin_start"
        android:id="@+id/crown"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_score_number"
        app:layout_constraintTop_toTopOf="@id/user_score_bar"
        app:layout_constraintStart_toEndOf="@id/crown"
        app:layout_constraintBottom_toTopOf="@id/user_score_text"
        android:text="@string/user_score_number"
        android:fontFamily="@font/fontsfree_net_sfprodisplay_heavy"
        android:textSize="@dimen/battle_view_user_score_number_size"
        android:textColor="@color/black"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/view_margin_small"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_score_text"
        app:layout_constraintTop_toBottomOf="@id/user_score_number"
        app:layout_constraintStart_toEndOf="@id/crown"
        app:layout_constraintBottom_toBottomOf="@id/user_score_bar"
        android:text="@string/user_score_text"
        android:textColor="@color/black"
        android:fontFamily="@font/fontsfree_net_sfprodisplay_medium"
        android:textSize="@dimen/battle_view_user_score_text_size"
        android:layout_marginStart="@dimen/view_margin_small"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_level"
        app:layout_constraintTop_toTopOf="@id/user_score_bar"
        app:layout_constraintBottom_toBottomOf="@id/user_score_bar"
        app:layout_constraintEnd_toEndOf="@id/user_score_bar"
        android:layout_marginEnd="@dimen/battle_view_level_margin_end"
        android:id="@+id/level"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_level_number"
        app:layout_constraintTop_toTopOf="@id/user_score_bar"
        app:layout_constraintStart_toEndOf="@id/level"
        app:layout_constraintBottom_toTopOf="@id/user_score_text"
        android:text="@string/user_level_number"
        android:textColor="@color/black"
        android:fontFamily="@font/fontsfree_net_sfprodisplay_heavy"
        android:textSize="@dimen/battle_view_user_level_number_size"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/view_margin_small"
        android:layout_marginTop="@dimen/battle_view_user_level_number_margin_top"/>

    <ProgressBar
        android:id="@+id/progressBar_horizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/battle_view_progressbar_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_small"
        android:max="10"
        android:progress="4"
        android:progressBackgroundTint="@color/pbar_secondary_color_horizontal"
        android:progressTint="@color/pbar_primary_color_horizontal"
        app:layout_constraintStart_toEndOf="@id/level"
        app:layout_constraintTop_toBottomOf="@id/user_level_number"
        app:layout_constraintBottom_toBottomOf="@id/user_score_bar"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group_24"
        app:layout_constraintTop_toBottomOf="@id/user_score_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/battle_view_multi_player_avatar_margin_start"
        android:layout_marginTop="@dimen/battle_view_multi_player_avatar_margin_top"
        android:id="@+id/multiplayer_group"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse_9"
        app:layout_constraintTop_toBottomOf="@id/user_score_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/battle_view_ellipse9_margin_start"
        android:layout_marginTop="@dimen/view_margin_xlarge"
        android:id="@+id/ellipse9"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/two_player"
        app:layout_constraintTop_toBottomOf="@id/multiplayer_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="İki Oyuncu"
        android:fontFamily="@font/fontsfree_net_sfprodisplay_heavy"
        android:textSize="@dimen/battle_view_multi_player_size"
        android:textColor="@color/pink_color"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginEnd="@dimen/view_margin_medium"
        android:layout_marginTop="@dimen/battle_view_multi_player_margin_top"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/startNowButton"
        android:background="@drawable/rounded_button_pink"
        android:layout_marginStart="@dimen/battle_view_pink_button_margin_start"
        android:layout_marginTop="@dimen/battle_view_pink_button_margin_top"
        android:layout_marginEnd="@dimen/view_margin_medium"
        android:drawableRight="@drawable/ic_rightarrow"
        android:paddingRight="@dimen/battle_view_startnow_padding"
        android:text="@string/start_now"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two_player"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/battle_view_ellipse3_margin_start"
        android:layout_marginBottom="@dimen/battle_view_ellipse3_margin_bottom"
        android:id="@+id/ellipse3"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse_5"
        app:layout_constraintBottom_toTopOf="@id/ellipse3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/view_margin_xxlarge"
        android:layout_marginBottom="@dimen/view_margin_large"
        android:id="@+id/ellipse5"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ellipse_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ellipse3"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginBottom="@dimen/battle_view_ellipse4_margin_bottom"
        android:id="@+id/ellipse4"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_group_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/battle_view_single_player_avatar_margin_start"
        android:layout_marginBottom="@dimen/battle_view_single_player_avatar_margin_bottom"
        android:id="@+id/singleplayer_group"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/one_player"
        app:layout_constraintBottom_toTopOf="@id/startNowButton_for_singleplayer"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/single_player"
        android:fontFamily="@font/fontsfree_net_sfprodisplay_medium"
        android:textSize="@dimen/battle_view_single_player_size"
        android:textColor="@color/default_text_color"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginBottom="@dimen/battle_view_single_player_margin_bottom"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/startNowButton_for_singleplayer"
        android:background="@drawable/rounded_button_white_with_border"
        android:layout_marginBottom="@dimen/battle_view_white_button_margin_bottom"
        android:layout_marginEnd="@dimen/view_margin_medium"
        android:layout_marginStart="@dimen/battle_view_white_button_margin_start"
        android:drawableRight="@drawable/ic_rightblackarrow"
        android:paddingRight="@dimen/battle_view_startnow_padding"
        android:text="@string/start_now"
        android:textColor="@color/default_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>